[gd_scene load_steps=2 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]

[node name="Inventory" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -340.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 333.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 326.0
margin_bottom = 14.0
text = "Inventory"

[node name="InventoryList" type="ItemList" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 326.0
margin_bottom = 27.0
auto_height = true
[connection signal="item_activated" from="VBoxContainer/InventoryList" to="." method="_on_InventoryList_item_activated"]
[connection signal="nothing_selected" from="VBoxContainer/InventoryList" to="." method="_on_InventoryList_nothing_selected"]
